Fix logo on mobile

--- a/assets/style/header.less
+++ b/assets/style/header.less
@@ -4,6 +4,7 @@
 
   .navbar-header {
     float: left;
+    padding-left: inherit;
   }
 
   .navbar {
